--- a/config/config.yaml
+++ b/config/config.yaml
@@ -53,17 +53,17 @@ models:
     threshold_temperature: 32.0  # Celsius
     consecutive_days: 3
     hyperparameters:
-      n_estimators: 100
-      max_depth: 10
+      n_estimators: 50
+      max_depth: 8
       random_state: 42
   
   rainfall:
     algorithm: "XGBRegressor"
     extreme_threshold: 50.0  # mm/day
     hyperparameters:
-      n_estimators: 150
+      n_estimators: 50  # Reduced for faster training
       learning_rate: 0.1
-      max_depth: 6
+      max_depth: 5  # Reduced for faster training
       random_state: 42
   
   flood:
@@ -73,8 +73,8 @@ models:
     slope_weight: 0.3
     soil_weight: 0.3
     hyperparameters:
-      n_estimators: 120
-      max_depth: 12
+      n_estimators: 50  # Reduced for faster training
+      max_depth: 10  # Reduced for faster training
       random_state: 42
 
 # Feature Engineering
