--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,14 @@ geopandas>=0.13.0
 rasterio>=1.3.0
 shapely>=2.0.0
 pyproj>=3.5.0
+fiona>=1.9.0
 
 # Data Acquisition
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 netCDF4>=1.6.0
 xarray>=2023.1.0
+cdsapi>=0.5.0
 
 # Deep Learning (Optional)
 torch>=2.0.0
@@ -41,6 +43,7 @@ pyyaml>=6.0
 python-dotenv>=1.0.0
 tqdm>=4.65.0
 joblib>=1.3.0
+numba>=0.57.0
 
 # Jupyter
 jupyter>=1.0.0
